# rust_topojson_client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/benches/: world.rs
lib/src/: bbox.rs  bisect.rs  feature.rs  feature_geo_type.rs  lib.rs  merge.rs  mesh.rs  neighbors.rs  polygon_u.rs  reverse.rs  stitch.rs  transform.rs
lib/src/tests/: feature_tests.rs  mod.rs
lib/tests/: world.rs
lib/tests/geojson/: polygon-mercator.json  polygon.json
lib/tests/topojson/: empty-q1e4.json  empty.json  point-q1e5.json  point.json  points-q1e5.json  points.json  polygon-mercator-q1e4.json  polygon-mercator-q1e5.json  polygon-mercator.json  polygon-q1e4.json  polygon-q1e5.json  polygon.json  properties-q1e4.json  properties.json
rusttopo2geo/: Cargo.toml  africa.txt
rusttopo2geo/src/: main.rs
src/: feature.rs  lib.rs  reverse.rs  transform.rs
tests/: world.rs
