cargo-features = ["edition2021"]
[package]
name = "rust_topojson_client"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
derivative ="2.2.0"

[dev-dependencies]
pretty_assertions ="1.0"
