cargo-features = ["edition2021"]
[package]
name = "rust_topojson_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.18.0"
topojson = "0.5.0"
derivative ="2.2.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
