[package]
name = "rust_topojson_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "~0.23"
topojson = "~0.5"
derivative = "~2"

[dev-dependencies]
pretty_assertions = "~1"
criterion = "~0.4"
serde_json = "~1"
serde = "~1"


[[bench]]
name = "world"
harness = false
