[package]
name = "rust_topojson_client"
version = "0.1.0"
edition = { workspace=true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
geo = { workspace = true }
topojson = { workspace = true }

[dev-dependencies]
pretty_assertions = "~1"
criterion = "~0.8"
serde_json = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "world"
harness = false
