[package]
name = "rusttopo2geo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
serde_json = "1.0.69"
serde="1.0"
geo = "0.18.0"

topojson = "0.5.0"
rust_topojson_client = {path="../lib"}
