[package]
name = "rusttopo2geo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~4"
serde_json = "~1.0"
serde = "~1"
geo = { workspace = true }
topojson = "~0.5"
rust_topojson_client = { path = "../lib" }
