[package]
name = "rusttopo2geo"
version = "0.1.0"
edition = { workspace=true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
serde_json = { workspace = true }
serde = { workspace = true }
geo = { workspace = true }
topojson = { workspace = true }
rust_topojson_client = { path = "../lib" }
